# poly_discover

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-deploy.yml  deploy.yml
crates/engine/: Cargo.toml
crates/engine/src/: discovery.rs  engine.rs  fees.rs  gabagool.rs  indicators.rs  leaderboard.rs  lib.rs  optimizer.rs  orderbook_backtest.rs  orderbook_collector.rs  profile.rs  strategy.rs  types.rs  watcher.rs  web_strategies.rs
crates/engine/src/api/: binance.rs  mod.rs  polymarket.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs  schema.rs
crates/persistence/src/repository/: discovery.rs  leaderboard.rs  mod.rs  orderbook.rs  profile.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: main.rs
docs/: BINANCE_API.md  DEPLOIEMENT_AWS.md  POLYMARKET_API.md  POLYMARKET_KEYS_SETUP.md  POLYMARKET_WEB_STRATEGIES.md  REVERSE_ENGINEERING.md  benchmark_polymarket_bot_stack.md  llms.md  new_polymarket_doc.md  polymarket-15min-crypto-reference.md
src/: App.svelte
src/components/: Layout.svelte  Sidebar.svelte
src/docs/: POLYMARKET_COMPLETE.md  PREREQUIS_INSTALLATION.md
src/lib/: api.js  stores.js
src/pages/: Discovery.svelte  KnowledgeBase.svelte  Leaderboard.svelte  Optimizer.svelte  OrderbookAnalysis.svelte  Playbook.svelte  ProfileAnalysis.svelte  StrategyResearch.svelte  TopStrategies.svelte
