[workspace]
resolver = "2"
members = ["crates/engine", "crates/persistence", "crates/server"]

[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
sha2 = "0.10"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
ta = "0.5"
dotenvy = "0.15"
async-trait = "0.1"
rand = "0.8"
