[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
persistence = { path = "../persistence" }

tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ta = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
rust_decimal_macros = { workspace = true }
