[package]
name = "poly-discover"
version.workspace = true
edition.workspace = true

[[bin]]
name = "poly-discover"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
persistence = { path = "../persistence" }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
